--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
+    "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^2.1.2"
   }
 }
