--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-sourcemaps": "^2.6.0",
-    "gulp-uglify": "^2.1.2"
+    "gulp-uglify": "^2.1.2",
+    "path": "^0.12.7",
+    "sw-precache": "^5.1.1",
+    "sw-toolbox": "^3.6.0"
   }
 }
